Fix Quote section on smaller devices
Changed from using padding to achieve indent to using the
min-width constraint

--- a/styles.css
+++ b/styles.css
@@ -154,11 +154,14 @@ footer {
     flex-direction: column;
     align-items: center;
     
+    
 }
 .quote {
     display: flex;
+    flex: 1;
     flex-direction: column;
-    padding: 120px 200px;
+    padding: 120px 0;
+    max-width: 600px;
     
     
 }
